[gd_scene load_steps=12 format=3 uid="uid://dywbbdwfh4nnd"]

[ext_resource type="PackedScene" uid="uid://dpa0jyu5jcrif" path="res://enemies/enemy_base.tscn" id="1_p7bjd"]
[ext_resource type="Script" path="res://enemies/eagle.gd" id="2_ikpck"]
[ext_resource type="Texture2D" uid="uid://cqlgwkalgbpaw" path="res://assets/enemies/eagle/eagle-attack.png" id="3_fh6u1"]
[ext_resource type="PackedScene" uid="uid://4gcvrmybbjw6" path="res://shooter.tscn" id="4_3je05"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ubs"]
atlas = ExtResource("3_fh6u1")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_npv5x"]
atlas = ExtResource("3_fh6u1")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w3pq"]
atlas = ExtResource("3_fh6u1")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_jky6p"]
atlas = ExtResource("3_fh6u1")
region = Rect2(120, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_ntiir"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ubs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npv5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w3pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jky6p")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2dig"]
size = Vector2(16, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_ihmpf"]
radius = 8.06226

[node name="Eagle" instance=ExtResource("1_p7bjd")]
collision_mask = 0
script = ExtResource("2_ikpck")

[node name="AnimatedSprite2D" parent="." index="1"]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_ntiir")
animation = &"fly"
frame = 3
frame_progress = 0.342998

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_g2dig")

[node name="TurnTimer" type="Timer" parent="." index="3"]
wait_time = 3.0

[node name="PlayerDetector" type="RayCast2D" parent="." index="4"]
position = Vector2(0, 3)
target_position = Vector2(0, 200)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_ihmpf")

[node name="Shooter" parent="." index="6" instance=ExtResource("4_3je05")]
speed = 80.0
life_span = 20.0
bullet_key = 1
shoot_delay = 2.0

[connection signal="timeout" from="TurnTimer" to="." method="_on_turn_timer_timeout"]
